--- a/styles/style.css
+++ b/styles/style.css
@@ -39,33 +39,35 @@ ul,
 ol {
   list-style: none;
 }
+
 .content {
   display: flex;
   justify-content: center;
   gap: 30px;
-  width: 1140px;
-  
+  width: 1140px; 
   align-items: end;
   margin: auto;
 }
+
 .search-form {
   display: flex;
-  width: 711px;
   justify-content: space-between;
-  padding-left: 0px;
+  
 }
+
 .content__list {
-  overflow: scroll;
   overflow-x: auto;
   height: 298px;
   display: flex;
   flex-direction: column;
   position: relative;
 }
+
 .content__details {
   width: 100%;
   height: 100%;
 }
+
 .visually-hidden {
   position: absolute;
   inline-size: 1px;
@@ -75,36 +77,46 @@ ol {
   clip-path: inset(50%);
   white-space: nowrap;
 }
+
 .result__video-container {
   width: 711px;
   height: 386px;
   margin-bottom: 16px;
   position: relative;
 }
+
 .result__video {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
+
 .content__list-item {
   display: flex;
   justify-content: start;
 }
+
 .content__list-item:not(:last-child) {
   margin-bottom: 30px;
 }
+
 .content__video-card {
   display: flex;
   justify-content: start;
 }
+
 .content__video-card-thumbnail {
   width: 194px;
   height: 103px;
+  object-fit: cover;
+  object-position: center;
 }
+
 .content__video-card-description-container {
   width: 200px;
 }
+
 .title {
   margin-bottom: 26px;
   font-size: 75px;
@@ -112,39 +124,47 @@ ol {
   text-transform: uppercase;
   line-height: 70.5px;
 }
+
 .content__accent {
   color: #545050;
 }
+
 .content__video-card-title {
   font-size: 30px;
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   color: #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
+
 .content__card-link {
   text-decoration: none;
   margin: 2px;
 }
+
 .content__video-card-description {
   font-size: 18px;
   color: #ffffff;
   font-family: "Fira Sans Condensed", sans-serif;
 }
+
 .search-form__fieldset-title {
   font-size: 18px;
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   line-height: 21.6px;
 }
+
 .search-form__fieldset {
   border: 0;
   display: flex;
-  flex-direction: column;
-  width: 220px;
+  flex-direction: column; 
   gap: 5px;
-  padding-left: 4px;
   padding-bottom: 2px;
 }
+
 .search-form__textfield {
   font-family: inherit;
   color: #ffffffb2;
@@ -153,19 +173,21 @@ ol {
   border-bottom: 1px solid;
   border-top: 1px solid;
   background-color: transparent;
-  width: 100%;
+  min-width: 225px;
   font-size: inherit;
   padding: 0px;
   font-size: 18px;
   border-width: 1px;
-  cursor: pointer;
+  cursor: auto;
 }
+
 .search-form__checkbox-list {
-  margin-top: 5px;
   display: flex;
   justify-content: space-around;
   gap: 15px;
+  margin-bottom: 5px;
 }
+
 .search-form__pseudo-checkbox {
   display: inline-block;
   min-width: 19px;
@@ -173,6 +195,7 @@ ol {
   background-color: transparent;
   border: 1px solid white;
 }
+
 .search-form__pseudo-checkbox::after {
   content: "";
   display: none;
@@ -181,27 +204,34 @@ ol {
   background-color: #fff;
   margin: 1px 0 0 1px;
 }
+
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   display: block;
 }
+
 .search-form__label-text:hover {
   text-decoration: underline;
 }
+
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #ffffff;
   outline-offset: 2px;
   height: max-content;
 }
+
 .search-form__textfield:focus {
   outline: 0;
 }
+
 .search-form__label {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
+  gap: 5px;
 }
+
 .button {
   background-color: transparent;
   border: 1px solid white;
@@ -212,44 +242,56 @@ ol {
   line-height: 21.6px;
   cursor: pointer;
 }
+
 .search-form__submit-button {
   width: 194px;
   padding: 5px;
 }
+
 .search-form:not(fieldset) {
   align-items: end;
 }
+
 .button:active {
   background-color: #545050;
 }
+
 .button:hover {
   text-decoration: underline;
 }
+
 .button:focus {
   outline: none;
 }
+
 .button:focus-visible {
   outline: 1px solid #ffffff;
   outline-offset: 1px;
 }
+
 .more-button {
   width: 398px;
   margin-bottom: 2px;
   padding: 5px;
 }
+
 .content__card-link:active {
   background-color: #545050;
 }
+
 .content__card-link:hover {
   text-decoration: underline solid white;
   text-underline-offset: 6px;
 }
+
 .content__card-link:focus {
   outline: none;
 }
+
 .content__card-link:focus-visible {
-  outline: 2px solid white;
+  outline: 1px solid white;
 }
+
 .content__card-link_current {
   background-color: #545050;
 }
