--- a/styles/style.css
+++ b/styles/style.css
@@ -126,6 +126,7 @@ ol {
 
 .content__video-card-title {
   line-height: 30px;
+  font-size: 30px;
   padding-bottom: 4px;
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
@@ -142,6 +143,7 @@ ol {
 
 .content__video-card-description {
   font-size: 18px;
+  line-height: 16.2px;
   color: #ffffff;
   font-family: "Fira Sans Condensed", sans-serif;
 }
@@ -204,7 +206,7 @@ ol {
   display: block;
 }
 
-.search-form__label:hover {
+.search-form__label:hover .search-form__label-text:hover {
   text-decoration: underline;
 }
 
