--- a/styles/style.css
+++ b/styles/style.css
@@ -206,7 +206,7 @@ ol {
   display: block;
 }
 
-.search-form__label:hover .search-form__label-text:hover {
+.search-form__label:hover:hover .search-form__label-text {
   text-decoration: underline;
 }
 
